--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-navigation/native": "^5.9.8",
+    "@react-navigation/stack": "^5.14.9",
     "apisauce": "^2.1.2",
     "expo": "~43.0.0",
     "expo-status-bar": "~1.1.0",
+    "lottie-react-native": "4.0.3",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.2",
