--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "react-native": "0.64.2",
     "react-native-chart-kit": "^6.11.0",
     "react-native-dimension": "^1.0.6",
+    "react-native-gesture-handler": "~1.10.2",
+    "react-native-safe-area-context": "3.3.2",
+    "react-native-screens": "~3.8.0",
     "react-native-svg": "12.1.1",
     "react-native-web": "0.17.1"
   },
